--- a/styles/style.css
+++ b/styles/style.css
@@ -97,9 +97,13 @@ ol {
   align-items: center;
   width: fit-content;
   gap: 5px;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1;
 }
 
-.search-form__label:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline;
   text-underline-offset: 4px;
 }
@@ -115,7 +119,7 @@ ol {
 }
 
 .search-form__textfield {
-  font-family: "FiraSansCondensed", sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 1;
@@ -124,7 +128,7 @@ ol {
 }
 
 .search-form_textfield::placeholder {
-  color: rgb(255 255 255 / 0.7);
+  color: rgb(255 255 255 / 0.7);  
 }
 
 .search-form__checkbox-list {
@@ -251,22 +255,22 @@ label:has(input:focus-visible) {
   padding-left: 3px;
 }
 
-.content__card-link {
-  display: block;
-  text-decoration: none;
-  color: #fff;
-}
-
-.content__card-link__current {
-  background-color: #545050;
-}
-
 .content__video-card {
   width: 390px;
   position: relative;
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
 
 .content__card-link:active {
